--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "chromadb": "^3.0.17",
     "concurrently": "^8.2.2",
     "electron": "^38.4.0",
     "eslint": "^8.55.0",
@@ -53,7 +55,6 @@
     "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "chromadb": "^1.7.3",
     "csv-writer": "^1.6.0",
     "date-fns": "^2.30.0",
     "docx": "^8.5.0",
@@ -64,6 +65,7 @@
     "jest": "^29.7.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.294.0",
+    "pdf-lib": "^1.17.1",
     "playwright": "^1.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -71,9 +73,7 @@
     "react-router-dom": "^6.8.1",
     "recharts": "^2.8.0",
     "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.7",
-    "pdf-lib": "^1.17.1"
+    "uuid": "^9.0.1"
   },
   "build": {
     "appId": "com.jobtracker.app",
